--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google/maps": "^0.5.5",
     "axios": "^0.18.0",
     "bulma": "^0.7.2",
     "google-maps-react": "^2.0.2",
