--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@google/maps": "^0.5.5",
     "axios": "^0.18.0",
-    "bulma": "^0.7.2",
     "google-maps-react": "^2.0.2",
+    "install": "^0.12.2",
+    "npm": "^6.5.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
